vitrail-pg-macros/tests/ui/fail/db_uuid_non_string.stderr
error: `@db.Uuid` is only supported on `String` fields
  --> tests/ui/fail/db_uuid_non_string.rs:10:18
   |
10 |         uid Int @db.Uuid
   |                  ^^
